# birdpro

./: .gitignore  .gitmodules  README.md  bun.lockb  package.json  svelte.config.js  vite.config.js
.forgejo/workflows/: build.yaml
.github/workflows/: build.yaml
crates/espeak-rs-sys/: .gitignore  README.md  build.rs
crates/espeak-rs-sys/espeak-ng-data-compiled/: es_dict
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/assets/data/: tiktokVoices.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/macos/: genAssetCar.sh
src-tauri/icons/macos/birdpro-icon-mac.icon/: icon.json
src-tauri/src/: audio.rs  hrm.rs  lib.rs  main.rs  provider.rs  voice.rs
src-tauri/src/backends/: elevenlabs.rs  mod.rs  msedge.rs  piper.rs  sapi.rs  tiktok.rs  tts.rs  windows.rs
src-tauri/src/ipc/: audio.rs  config.rs  error.rs  mod.rs  osc.rs  tts.rs
src/assets/: main.css  switzer.css
src/assets/icons/: IconAdd.svelte  IconAudibleTypingIndicatorOff.svelte  IconAudibleTypingIndicatorOn.svelte  IconBin.svelte  IconCloud.svelte  IconEdit.svelte  IconEnter.svelte  IconFavourite.svelte  IconFolder.svelte  IconHeadphones.svelte  IconHeart.svelte  IconKey.svelte  IconOsc.svelte  IconPitch.svelte  IconRate.svelte  IconSearch.svelte  IconSettings.svelte  IconSparkle.svelte  IconSpinner.svelte  IconStop.svelte  IconUpdate.svelte
src/assets/icons/twemoji/: Warning.svelte  WarningWithOutline.svelte
src/components/: ClickyButton.svelte  FavouriteVoice.svelte  HistoryItem.svelte  LoadingSpinner.svelte  SayButton.svelte  SidebarItem.svelte  SidebarOscStatus.svelte  SplitMenuBrowse.svelte  SplitMenuFavourite.svelte  SplitMenus.svelte  StatusBar.svelte  StepToggle.svelte  Voicebank.svelte
src/components/alert/: Modal.svelte  ModalCloseButton.svelte  ModalContainer.svelte  ToastContainer.svelte
src/components/feat/favourites/: FavouriteVoice.svelte
src/components/feat/history/: HistoryContainer.svelte  HistoryItem.svelte  HistoryItemCompact.svelte  HistoryItemSingle.svelte
src/components/feat/settings/: SettingsExplainerText.svelte  SettingsPage.svelte  SettingsSectionTitle.svelte
src/components/feat/sidebar/: VoiceEditor.svelte
src/components/feat/splitmenu/: NoticeRequiresAuth.svelte  NoticeRequiresFolder.svelte  SplitMenuBrowse.svelte  SplitMenuFavourite.svelte  SplitMenus.svelte
src/components/feat/statusbar/: HeartRate.svelte
src/components/feat/update/: UpdateButton.svelte
src/components/ui/: Button.svelte  Checkbox.svelte  SelectList.svelte  SelectListOption.svelte  TextInput.svelte
src/lang/: en.json
src/lib/: audio.ts  bird.ts  config.ts  favourites.ts  history.ts  modal.ts  toast.ts  txtoutput.ts  updates.ts
src/lib/worker/: updateWorker.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/screens/: add-favourite.svelte  hrm.svelte  onboarding.svelte  settings-about.svelte  settings-appearance.svelte  settings-appearence.svelte  settings-audio.svelte  settings-behaviour.svelte  settings-dev.svelte  settings-devcomponents.svelte  settings-integrations.svelte  settings-osc.svelte  settings-placeholder.svelte  settings-providers.svelte  settings-replacements.svelte  settings.svelte
