[package]
name = "birdpro"
version = "0.1.0"
description = "text to speech for birds"
authors = ["vimae <mae@mae.wtf>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "birdpro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tts = "0.26.3"
msedge-tts = "0.3.0"
rodio = { version = "0.21.1" }
cpal = { version = "0.17.1", features = ["jack"] }
tokio = "1.49.0"
reqwest = { version = "0.13.1", features = ["json"] }

[target.'cfg(windows)'.dependencies]
sapi-lite = "0.1.1"
