[package]
name = "birdpro"
version = "1.0.1"
description = "text to speech for birds"
authors = ["vimae <mae@mae.wtf>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# must be different from package name atm#
# see https://github.com/rust-lang/cargo/issues/8519
name = "birdcore"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-clipboard-manager = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

rodio = { version = "0.21.1", features = ["wav", "vorbis", "mp3", "symphonia"] }
cpal = { version = "0.17.1", features = ["jack"] }
tokio = "1.49.0"
reqwest = { version = "0.13.1", features = ["json"] }
humantime = "2.3.0"
log = "0.4.29"
hound = "3.5.1"
base64 = "0.22.1"
walkdir = "2"

vrchat_osc = "2.1.0"

msedge-tts = "0.3.0"
piper-rs = "0.1.9"
ort = { version = "=2.0.0-rc.9" }
ort-sys = { version = "=2.0.0-rc.9", default-features = false }
tauri-plugin-dialog = "2"

[patch.crates-io]
espeak-rs-sys = { path = "../crates/espeak-rs-sys" }

[target.'cfg(windows)'.dependencies.windows]
version = "0.62.2"
features = [
    "Data_Xml_Dom",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Media_SpeechSynthesis",
    "Media_Core",
    "Storage_Streams",
    "Win32_System_WinRT"
]

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
